# eidolist

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
linux/: com.github.lumiscosity.Eidolist.desktop  com.github.lumiscosity.Eidolist.metainfo.xml  com.github.lumiscosity.Eidolist.yml
src/: ce_diff.cpp  ce_diff.h  changelog_parse.cpp  changelog_parse.h  databaseholder.cpp  databaseholder.h  diffs.h  directorydialog.cpp  directorydialog.h  directorydialog.ui  filemerge_dialog.cpp  filemerge_dialog.h  filemerge_dialog.ui  main.cpp  map_diff.cpp  map_diff.h  merger_base.h  write_changelog.cpp  write_changelog.h
src/dialogs/: filemerge_dialog.cpp  filemerge_dialog.h  filemerge_dialog.ui  mapinfodiff_dialog.cpp  mapinfodiff_dialog.h  mapinfodiff_dialog.ui
